--- a/Terraform/.gitignore
+++ b/Terraform/.gitignore
@@ -14,6 +14,7 @@ output.json
 
 # Terraform Lock 파일 (다른 환경에서 provider 충돌 방지)
 .terraform.lock.hcl
+.terraform.tfstate.lock.info
 
 # Shell 스크립트 실행 결과
 *.sh
