Fix: ansible <-> ec2 instance 테스트

--- a/Ansible/playbooks/server.yml
+++ b/Ansible/playbooks/server.yml
@@ -1,6 +1,7 @@
 - name: Apply roles for Infra group
   hosts: all
   become: true
+  connection: local
   tasks:
     - name: Include roles dynamically
       include_role:
