Fix: ansible <-> ec2 instance 테스트4

--- a/Ansible/playbooks/server.yml
+++ b/Ansible/playbooks/server.yml
@@ -2,6 +2,14 @@
   hosts: all
   become: true
   connection: local
+
+  vars:
+  custom_roles:
+    - common
+    - docker
+    - cloudwatch
+    - codedeploy
+
   tasks:
     - name: Include roles dynamically
       include_role:
