Fix: CWagent 설치파일 경로 수정

--- a/Ansible/roles/cloudwatch/tasks/main.yml
+++ b/Ansible/roles/cloudwatch/tasks/main.yml
@@ -15,7 +15,7 @@
 
 - name: Copy config file
   template:
-    src: ../files/cloudwatchagent.json
+    src: /this/Ansible/files/cloudwatchagent.json
     dest: /home/ubuntu/config.json
 
 - name: Move config
