--- a/Ansible/roles/cloudwatch/tasks/main.yml
+++ b/Ansible/roles/cloudwatch/tasks/main.yml
@@ -1,3 +1,69 @@
+# - name: Check if Docker is installed
+#   command: which docker
+#   register: docker_check
+#   ignore_errors: yes
+#   changed_when: false
+
+# - name: Download CloudWatch Agent installer
+#   get_url:
+#     url: https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/latest/amazon-cloudwatch-agent.deb
+#     dest: ./amazon-cloudwatch-agent.deb
+#     mode: '0644'
+
+# - name: Install CloudWatch Agent
+#   shell: sudo dpkg -i -E ./amazon-cloudwatch-agent.deb
+
+# - name: Copy config file
+#   template:
+#     src: /this/Ansible/files/cloudwatchagent.json
+#     dest: /home/ubuntu/config.json
+
+# - name: Move config
+#   shell: sudo mv /home/ubuntu/config.json /opt/aws/amazon-cloudwatch-agent/etc
+
+# - name: Add CloudWatch Agent user to docker group (only if Docker is installed)
+#   user:
+#     name: cwagent
+#     groups: docker
+#     append: yes
+#   when: docker_check.rc == 0
+
+# - name: Enable CloudWatch Agent service
+#   systemd:
+#     name: amazon-cloudwatch-agent
+#     enabled: yes
+#     state: restarted
+
+
+# # ✅ 추가된 루트 실행 설정
+# - name: Create systemd override directory for CloudWatch Agent
+#   file:
+#     path: /etc/systemd/system/amazon-cloudwatch-agent.service.d
+#     state: directory
+#     mode: '0755'
+
+# - name: Override CloudWatch Agent service to run as root
+#   copy:
+#     dest: /etc/systemd/system/amazon-cloudwatch-agent.service.d/override.conf
+#     content: |
+#       [Service]
+#       User=root
+
+# - name: Reload systemd and restart CloudWatch Agent as root
+#   shell: |
+#     systemctl daemon-reexec
+#     systemctl daemon-reload
+#     systemctl restart amazon-cloudwatch-agent
+
+
+# - name: Start CloudWatch Agent
+#   command: >
+#     /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl
+#     -a fetch-config
+#     -m ec2
+#     -s
+#     -c file:/opt/aws/amazon-cloudwatch-agent/etc/config.json
+
 - name: Check if Docker is installed
   command: which docker
   register: docker_check
@@ -19,7 +85,7 @@
     dest: /home/ubuntu/config.json
 
 - name: Move config
-  shell: sudo mv /home/ubuntu/config.json /opt/aws/amazon-cloudwatch-agent/etc
+  shell: sudo mv /home/ubuntu/config.json /opt/aws/amazon-cloudwatch-agent/etc/config.json
 
 - name: Add CloudWatch Agent user to docker group (only if Docker is installed)
   user:
@@ -28,14 +94,7 @@
     append: yes
   when: docker_check.rc == 0
 
-- name: Enable CloudWatch Agent service
-  systemd:
-    name: amazon-cloudwatch-agent
-    enabled: yes
-    state: restarted
-
-
-# ✅ 추가된 루트 실행 설정
+# ✅ CloudWatch Agent를 root로 실행 (docker log 접근 위해)
 - name: Create systemd override directory for CloudWatch Agent
   file:
     path: /etc/systemd/system/amazon-cloudwatch-agent.service.d
@@ -55,8 +114,13 @@
     systemctl daemon-reload
     systemctl restart amazon-cloudwatch-agent
 
+- name: Enable CloudWatch Agent service
+  systemd:
+    name: amazon-cloudwatch-agent
+    enabled: yes
+    state: started
 
-- name: Start CloudWatch Agent
+- name: Start CloudWatch Agent with new config
   command: >
     /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-ctl
     -a fetch-config
